Cleaned and Commented  JMX config